--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "standard",
+    "lint-fix": "standard --fix"
   },
   "author": "Andrew Iguina",
   "license": "UNLICENSED",
@@ -13,6 +15,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5"
   },
