--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.18.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "discord.js": "^14.16.3",
